# rvcd

./: .gitignore  Cargo.toml  README.md  build.rs  eframe_template.js  eframe_template_bg.wasm  index.html  release.sh
.cargo/: config.toml
.github/workflows/: rust.yml  rust.yml.disabled
assets/: sw.js
benches/: vcd_parse.rs
data/: .gitignore  cpu_ila_commit.vcd
data/code-sample/: waterfall.v  waterfall_tb.v
eframe/: .cargo_vcs_info.json  Cargo.toml
eframe/src/native/: run.rs
locales/: en.yml  zh-CN.yml
proto/: rvcd.proto
src/: app.rs  client.rs  files.rs  frame_history.rs  lib.rs  main.rs  manager.rs  message.rs  radix.rs  rpc.rs  run_mode.rs  rvcd.rs  server.rs  service.rs  size.rs  tree_view.rs  utils.rs  verilog.rs  view.rs  wave.rs
src/code/: editor.rs  highlight.rs  mod.rs
src/verilog/: .gitignore  highlight.rs  mod.rs
src/view/: cursor.rs  mod.rs  signal.rs  time_bar.rs  ui.rs
src/wave/: mod.rs  utils.rs  vcd.rs  vcd_parser.rs
tests/: code_parser.rs
