[package]
name = "rvcd"
version = "0.1.0"
authors = ["Chiro <Chiro2001@163.com>"]
edition = "2021"
rust-version = "1.65"
default-run = "rvcd"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    #    "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    #    "wgpu",
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
vcd = { git = "https://github.com/chiro2001/rust-vcd", branch = "master" }
anyhow = "1.0.68"
num = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
egui_extras = "0.21.0"
futures = "0.3.25"
queues = "1.1.0"
trees = "0.4.2"
serde_json = "1.0.91"
tracing = "0.1.37"
rfd = "0.11.0"
rust-i18n = "1.1.1"
once_cell = "1.17.0"
regex = "1.7.1"
rev_lines = { git = "https://github.com/chiro2001/rev_lines", rev = "5cafb676addbcace2f3954b2801e82077c13733c" }
antlr-rust = "0.3.0-beta"
debug-ignore = "1.0.5"
clap = { version = "4.1.6", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tonic = "0.8.3"
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
egui-toast = { git = "https://github.com/chiro2001/egui-toast", rev = "2f3adaab2e7b1512b9d6101ba5d668351e224056" }
walkdir = "2.3.2"
tower = "0.4.13"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Window"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.egui-toast]
git = "https://github.com/chiro2001/egui-toast"
rev = "2f3adaab2e7b1512b9d6101ba5d668351e224056"
default-features = false
features = []


[profile.release]
opt-level = 2 # fast and small wasm
strip = true  # Automatically strip symbols from the binary.
lto = true


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "vcd_parse"
harness = false

[[bin]]
name = "rvcd"
path = "src/main.rs"

#[[bin]]
#name = "converter"
#path = "src/bin/converter.rs"